# sciagent-cli

./: .gitignore  LICENSE  MARKET_ANALYSIS.md  README.md  diag.yaml  fibonacci.py  pyproject.toml
.agent_states/: 0ff50b6982c5.json  5f4f4d0cbafa.json  8773067ac43d.json  8895aa500b21.json  8ace9d0d54d0.json  934ab30d60ef.json  a277f9eccaa1.json  dc5b66537887.json  f5f07873970b.json
.github/workflows/: build-images.yml
.venvtest/: pyvenv.cfg
_logs/: exec_log.jsonl  fetch_log.jsonl
_logs/background_jobs/: 17ede255.stderr  1f21ec26.stderr  4148c523.stderr  41b3be5b.stderr  68d5bbf2.stderr  86972aa9.stderr  86972aa9.stdout
debugdocs/: _config.yml  architecture.md  configuration.md  getting-started.md  novelty.md  subagents.md  usecases.md
designdoc/: case_studies.md  case_studies_progress.md
docs/: DOCUMENTATION.md  Gemfile  _config.yml  api-reference.md  architecture.md  case-studies.md  case-study-bioinformatics.html  case-study-datacenter-cfd.html  case-study-photonics.html  cloud-compute.md  comparison.md  configuration.md  getting-started.md  index.md  integrity.md  novelty.md  provenance_log_schema.md  subagents.md  task-orchestration.md  tools.md  use-cases.md  usecases.md  whats-new-v2.md
docs/case-studies/: bioinformatics.md  datacenter-cfd.md  digital-ic.md  index.md  photonics.md
docs/developers/: api-reference.md  architecture.md  index.md
docsold/: _config.yml  architecture.md  configuration.md  index.md
notes/: lineage-reader-followups.md  m0-followups.md  m1a-followups.md  m1b-followups.md  subagent-kind-followups.md
scripts/: cost_rollup.py  smoke_providers.sh
src/_logs/: fetch_log.jsonl
src/sciagent/: SKETCH_outcome_verification.md  __init__.py  agent.py  checkpoint.py  config.py  display.py  (+17 more)
src/sciagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cost_rollup.py  test_llm_portability.py  test_openfoam_paraview_skypilot.py  test_prompt_caching.py  test_workspace_mvp.py
(+159 files in other folders)
